--- a/index.html
+++ b/index.html
@@ -6,14 +6,58 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta name="keywords" content=""/>
 		<meta name="description" content=""/>
-		<link rel="stylesheet" href="" type="text/css" media="screen"/>
-		<link rel="stylesheet" href="" type="text/css" media="screen"/>
-		<link rel="stylesheet" href=""  type="text/css"/>
-		<link rel="stylesheet" href="" type="text/css"/>
+		<link rel="stylesheet" href="/css/reset.css"  type="text/css"/>
+		<link rel="stylesheet" href="/css/styles.css" type="text/css"/>
 		<title></title>
 	</head>
 	
 	<body>
-		<div class="container">Hello. Some more text.</div>
+		<div class="container">
+			
+			<div class="grid one-col">
+				<div class="grid-item">1/1</div>
+			</div> <!-- END .one-col -->
+			
+			<div class="grid two-col">
+				<div class="grid-item">2/2</div>
+				<div class="grid-item">2/2</div>
+			</div> <!-- END .two-col -->
+			
+			<div class="grid three-col">
+				<div class="grid-item">3/3</div>
+				<div class="grid-item">3/3</div>
+				<div class="grid-item">3/3</div>
+			</div> <!-- END .three-col -->
+			
+			<div class="grid four-col">
+				<div class="grid-item">4/4</div>
+				<div class="grid-item">4/4</div>
+				<div class="grid-item">4/4</div>
+				<div class="grid-item">4/4</div>
+			</div> <!-- END .four-col -->
+			
+			<div class="grid five-col">
+				<div class="grid-item">5/5</div>
+				<div class="grid-item">5/5</div>
+				<div class="grid-item">5/5</div>
+				<div class="grid-item">5/5</div>
+				<div class="grid-item">5/5</div>
+			</div> <!-- END .five-col -->
+			
+			<div class="grid six-col">
+				<div class="grid-item">6/6</div>
+				<div class="grid-item">6/6</div>
+				<div class="grid-item">6/6</div>
+				<div class="grid-item">6/6</div>
+				<div class="grid-item">6/6</div>
+				<div class="grid-item">6/6</div>
+			</div> <!-- END .six-col -->
+			
+		</div> <!-- END .container -->
+		
+		<div class="layout-two-column">
+			<div class="main">Main Content</div>
+			<div class="side">Sidebar content</div>
+		</div>
 	</body>
 </html>
