--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<body>
 		<div class="container">
-			
+			Hello world!
 			<div class="grid one-col">
 				<div class="grid-item">1/1</div>
 			</div> <!-- END .one-col -->
