--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
 	
 	<body>
 		<div class="container">
-			Hello world!
+			
+			<nav class="cf">
+  			<ul class="cf" id="menu">
+    			<li><a href="###">Home</a></li>
+    			<li><a href="###">About Us</a></li>
+    			<li><a href="###">Products &amp; Services</a></li>
+    			<li><a href="###">Solutions</a></li>
+    			<li><a href="###">News</a></li>
+    			<li><a href="###">Contact Us</a></li>
+  			</ul>
+  			<a href="#menu" id="pull">Menu</a>
+        <a href="#menu" id="push">Close</a>
+			</nav>
+			
+			<div class="clearfloat"></div>
+			
 			<div class="grid one-col">
 				<div class="grid-item">1/1</div>
 			</div> <!-- END .one-col -->
@@ -54,6 +69,8 @@
 			</div> <!-- END .six-col -->
 			
 		</div> <!-- END .container -->
+		
+		<hr>
 		
 		<div class="layout-two-column">
 			<div class="main">Main Content</div>
