--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 	
 	<body>
 		<div class="container">
+  		
+  		<nav class="cf">
+		  	<ul class="cf" id="menu">
+		  		<li><a href="#">Home</a></li>
+		  		<li><a href="#">About</a></li>
+		  		<li><a href="#">Products</a></li>
+		  		<li><a href="#">Services</a></li>
+		  		<li><a href="#">Portfolio</a></li>
+		  		<li><a href="#">Contact</a></li>
+		  	</ul>
+		  	<a href="#menu" id="pull">Menu</a>
+<!-- 		  	<a href="#menu" id="push">Close</a> -->
+		  </nav>
 			
 			<div class="clearfloat"></div>
 			
