--- a/scss/__notes.html
+++ b/scss/__notes.html
@@ -3,7 +3,7 @@
 
 
 
-Flex Box PARENT Variables:
+Flex Box PARENT Variables (flex-parent):
 
 flex-direction 		= 	row | row-reverse | column | column-reverse
 flex-wrap 				= 	nowrap | wrap | wrap-reverse
@@ -13,11 +13,10 @@ align-content 		= 	flex-start | flex-end | center | space-between | space-around
 
 
 
-Flex Box CHILD Variables:
+Flex Box CHILD Variables (flex-child):
 
-order 						=
-flex-grow 				=
-flex-shrink 			=
-flex-basis 				=
-flex 							=
-align-self: 			=
+order 						=		0 | (number)
+flex-grow 				=		0 | (number)
+flex-shrink 			=		1 | (number)
+flex-basis 				=		auto | (number (%, em, px))
+align-self: 			=		auto | flex-start | flex-end | center | baseline | stretch;
