--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<div class="container">
   		<nav id="nav" role="navigation">
-    		<a href="#nav" title="Show Navigation"> Menu</a>
+    		<a href="#menu" title="Show Navigation"> Menu</a>
     		<a href="#" title="Hide Navigation"> Menu</a>
     		<ul>
       		<li><a href="/">Home</a></li>
